[metadata]
name = kube-perftest
version = 0.1.0
description = Kubernetes operator for running performance tests.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/kube-perftest


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    jinja2
    kopf
    kubernetes
    pyyaml

[options.entry_points]
perftest.benchmarks =
    fio   = perftest.benchmarks:fio
    iperf = perftest.benchmarks:iperf
