[metadata]
name = kube-perftest
version = 0.1.0
description = Kubernetes operator for running performance tests.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/kube-perftest


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic[yaml]
    easykube
    jinja2
    kopf
    kube-custom-resource
    pydantic
    pyyaml
